Test: Rework Game tests to test interactions and state changes; Add a test to check invalid God effects